
  o Minor features (controller):
    - Warn the user when an application uses the obsolete binary v0
      control protocol.  We're planning to remove support for it during
      the next development series, so it's good to give people some
      advance warning.
    - Add STREAM_BW events to report per-entry-stream bandwidth use. (Patch
      from Robert Hogan.)

  o Minor features:
    - Remove some never-implemented options.  Mark PathlenCoinWeight as
      obsolete.
    - Implement proposal 106: Stop requiring clients to have well-formed
      certificates; stop checking nicknames in certificates.  (Clients have
      certificates so that they can look like Tor servers, but in the future
      we might want to allow them to look like regular TLS clients instead.
      Nicknames in certificates serve no purpose other than making our
      protocol easier to recognize on the wire.)
    - Revise messages on handshake failure again to be even more clear about
      which are incoming connections and which are outgoing.
    - Discard any v1 directory info that's over 1 month old (for
      directories) or over 1 week old (for running-routers lists).
    - Do not warn when individual nodes in the configuration's EntryNodes,
      ExitNodes (etc) are down: warn only when all possible nodes are down.
      (Fixes bug 348.)
    - Always remove expired routers and networkstatus docs before checking
      whether we have enough information to build circuits. (Fixes bug 373)


Changes in version 0.1.2.7-alpha - 2007-02-06
  o Major bugfixes (rate limiting):
    - Servers decline directory requests much more aggressively when
      they're low on bandwidth. Otherwise they end up queueing more and
      more directory responses, which can't be good for latency.
    - But never refuse directory requests from local addresses.
    - Fix a memory leak when sending a 503 response for a networkstatus
      request.